--- a/index.html
+++ b/index.html
@@ -80,55 +80,62 @@
         <div class="deco-container">
             <img class="first-left-deco" src="./images/polka-img.png" alt="Polka image" width="110">
         </div>
-        <section class="second-section container">
-            <h3 class="section-title">What We Do</h3>
-            <h2 class="title">Our Service</h2>
-            <ul class="list">
-                <li class="item">
-                    <img class="item-icon" src="./images/icon-interior-design.png" alt="Interior Design icon" width="40"
-                          height="40">
-                    <div class="item-container">
-                        <h4 class="item-title">Interior Design</h4>
-                        <p class="item-text">Lorem ipsum dolor amet consectetur
-                            adipiscing elit sed eiusmod tempor
-                            incididunt.</p>
+        <section class="second-section">
+            <div class="container">
+                <div class="wrapper">
+                    <div>
+                        <h3 class="section-title">What We Do</h3>
+                        <h2 class="title">Our Service</h2>
                     </div>
-                </li>
-                <li class="item">
-                    <img class="item-icon" src="./images/icon-architecture.png" alt="Architecture icon" width="40"
-                          height="40">
-                    <div class="item-container">
-                        <h4 class="item-title">Architecture</h4>
-                        <p class="item-text">Lorem ipsum dolor amet consectetur
-                            adipiscing elit sed eiusmod tempor
-                            incididunt.</p>
+                    <div class="slider-controls-container">
+                        <ul class="slider-controls-list">
+                            <li class="slider-controls-item">
+                                <button type="button" class="slider-controls">
+                                    <svg class="controls-icon" width="10" height="10">
+                                        <use href="./images/icons.svg#arrow"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="slider-controls-item">
+                                <button type="button" class="slider-controls">
+                                    <svg class="controls-icon" width="10" height="10">
+                                        <use href="./images/icons.svg#arrow"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-                <li class="item">
-                    <img class="item-icon" src="./images/icon-planning.png" alt="Planning icon" width="40" height="40">
-                    <div class="item-container">
-                        <h4 class="item-title">Planning</h4>
-                        <p class="item-text">Lorem ipsum dolor amet consectetur
-                            adipiscing elit sed eiusmod tempor
-                            incididunt.</p>
-                    </div>
-                </li>
-            </ul>
-            <div class="slider-controls-container">
-                <ul class="slider-controls-list">
-                    <li class="slider-controls-item">
-                        <button type="button" class="slider-controls">
-                            <svg>
-                                <use href=""></use>
-                            </svg>
-                        </button>
+                </div>
+                <ul class="list">
+                    <li class="item">
+                        <img class="item-icon" src="./images/icon-interior-design.png" alt="Interior Design icon"
+                              width="40" height="40">
+                        <div class="item-container">
+                            <h4 class="item-title">Interior Design</h4>
+                            <p class="item-text">Lorem ipsum dolor amet consectetur
+                                adipiscing elit sed eiusmod tempor
+                                incididunt.</p>
+                        </div>
                     </li>
-                    <li class="slider-controls-item">
-                        <button type="button" class="slider-controls">
-                            <svg>
-                                <use href=""></use>
-                            </svg>
-                        </button>
+                    <li class="item">
+                        <img class="item-icon" src="./images/icon-architecture.png" alt="Architecture icon" width="40"
+                              height="40">
+                        <div class="item-container">
+                            <h4 class="item-title">Architecture</h4>
+                            <p class="item-text">Lorem ipsum dolor amet consectetur
+                                adipiscing elit sed eiusmod tempor
+                                incididunt.</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <img class="item-icon" src="./images/icon-planning.png" alt="Planning icon" width="40"
+                              height="40">
+                        <div class="item-container">
+                            <h4 class="item-title">Planning</h4>
+                            <p class="item-text">Lorem ipsum dolor amet consectetur
+                                adipiscing elit sed eiusmod tempor
+                                incididunt.</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -196,12 +203,34 @@
         </section>
         <section class="sixth-section">
             <div class="container">
-                <h3 class="section-title">
-                    Testimonials
-                </h3>
-                <h2 class="title">
-                    Client says about us
-                </h2>
+                <div class="wrapper">
+                    <div>
+                        <h3 class="section-title">
+                            Testimonials
+                        </h3>
+                        <h2 class="title">
+                            Client says about us
+                        </h2>
+                    </div>
+                    <div class="slider-controls-container">
+                        <ul class="slider-controls-list">
+                            <li class="slider-controls-item">
+                                <button type="button" class="slider-controls">
+                                    <svg class="controls-icon" width="10" height="10">
+                                        <use href="./images/icons.svg#arrow"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                            <li class="slider-controls-item">
+                                <button type="button" class="slider-controls">
+                                    <svg class="controls-icon" width="" height="10">
+                                        <use href="./images/icons.svg#arrow"></use>
+                                    </svg>
+                                </button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <ul class="list">
                     <li class="item">
                         <div class="image-wrapper">
@@ -234,24 +263,6 @@
                         <svg class="vector" width="32" height="32">
                             <use href="./images/icons.svg#quote"></use>
                         </svg>
-                    </li>
-                </ul>
-            </div>
-            <div class="slider-controls-container">
-                <ul class="slider-controls-list">
-                    <li class="slider-controls-item">
-                        <button type="button" class="slider-controls">
-                            <svg>
-                                <use href=""></use>
-                            </svg>
-                        </button>
-                    </li>
-                    <li class="slider-controls-item">
-                        <button type="button" class="slider-controls">
-                            <svg>
-                                <use href=""></use>
-                            </svg>
-                        </button>
                     </li>
                 </ul>
             </div>
