--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
                         </a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">
+                        <a class="navigation-link" href="#project">
                             <p>Project</p>
                         </a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">
+                        <a class="navigation-link" href="#service">
                             <p>Service</p>
                         </a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">
+                        <a class="navigation-link" href="#about">
                             <p>About</p>
                         </a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">
+                        <a class="navigation-link" href="#blog">
                             <p>Blog</p>
                         </a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">
+                        <a class="navigation-link" href="#shop">
                             <p>Shop</p>
                         </a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">
+                        <a class="navigation-link" href="#contact">
                             <p>Contact</p>
                         </a>
                     </li>
@@ -65,7 +65,7 @@
         </div>
     </header>
     <main>
-        <section class="first-section container">
+        <section id="project" class="first-section container">
             <div class="text-content">
                 <h3 class="section-title">Modern Interior</h3>
                 <h1 class="title">Create Your Interior Design.</h1>
@@ -80,7 +80,7 @@
         <div class="deco-container">
             <img class="first-left-deco" src="./images/polka-img.png" alt="Polka image" width="110">
         </div>
-        <section class="second-section">
+        <section id="service" class="second-section">
             <div class="container">
                 <div class="wrapper">
                     <div>
@@ -141,7 +141,7 @@
             </div>
         </section>
         <img class="first-right-deco" src="./images/polka-img.png" alt="Polka image" width="110">
-        <section class="third-section container">
+        <section id="about" class="third-section container">
             <div class="text-content">
                 <h3 class="section-title">About Us</h3>
                 <h2 class="title">Interioris The Will of An Epoch Mextreo</h2>
@@ -267,7 +267,7 @@
                 </ul>
             </div>
         </section>
-        <section class="seventh-section">
+        <section id="blog" class="seventh-section">
             <div class="container">
                 <h3 class="section-title">Latest news</h3>
                 <h2 class="title">From Our Blog</h2>
@@ -387,6 +387,7 @@
                 reserved.</span>
         </div>
     </footer>
+    <script src="./javascript/smooth-scroll.js"></script>
 </body>
 
 </html>
